microservices-intro-blog/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  # Number pods to create
  replicas: 1
  # Look at pods with a label of app: client
  selector:
    matchLabels:
      app: client
  # Specify the configuration of a pod that we want to be created by the deployment
  template:
    metadata:
      labels:
        app: client
    # Describe the configuration options for the pod we are trying to make
    spec:
      containers:
        - name: client
          image: roblkdeboer/client:latest
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
