microservices-intro-blog/infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  # Number pods to create
  replicas: 1
  # Look at pods with a label of app: event-bus
  selector:
    matchLabels:
      app: event-bus
  # Specify the configuration of a pod that we want to be created by the deployment
  template:
    metadata:
      labels:
        app: event-bus
    # Describe the configuration options for the pod we are trying to make
    spec:
      containers:
        - name: event-bus
          image: roblkdeboer/event-bus:latest
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  type: ClusterIP
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
