microservices-intro-blog/infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  # Number pods to create
  replicas: 1
  # Look at pods with a label of app: moderation
  selector:
    matchLabels:
      app: moderation
  # Specify the configuration of a pod that we want to be created by the deployment
  template:
    metadata:
      labels:
        app: moderation
    # Describe the configuration options for the pod we are trying to make
    spec:
      containers:
        - name: moderation
          image: roblkdeboer/moderation:latest
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  type: ClusterIP
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
