microservices-intro-blog/infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  # Number pods to create
  replicas: 1
  # Look at pods with a label of app: query
  selector:
    matchLabels:
      app: query
  # Specify the configuration of a pod that we want to be created by the deployment
  template:
    metadata:
      labels:
        app: query
    # Describe the configuration options for the pod we are trying to make
    spec:
      containers:
        - name: query
          image: roblkdeboer/query:latest
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
